# frappe-uav-sim-placeholder

./: .gitignore  README.md  pyproject.toml
cgs_uav_sim/: hooks.py  modules.txt
